# Portfolio-Projects

./: .gitignore  README.md  start-dev.bat
Drug Tariff Master/: .env.example  .gitignore  Drug Tariff Master - PRD.txt  INSTALLATION.md  README.md  calculate_prices.py  check_db.py  check_port.py  enhancement_plan.md  examine_db.py  main.py  process_lookup.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_debug.py  run_web_app.py  search_db.py  search_products.py  setup.cfg  setup_db.py  test_search.py
Drug Tariff Master/Product Insight/: Drug Tariff Master PRD.txt  PRD - Phase One.txt  Project PRD.txt  Technical-Specification-of-data-files-R2-v4.0-October-2024_2_.txt
Drug Tariff Master/config/: logging_config.py
Drug Tariff Master/schemas/: amp_v2_3.xsd  ampp_v2_3.xsd  gtin_v2_0.xsd  lookup_v2_3.xsd  vmp_v2_3.xsd  vmpp_v2_3.xsd
Drug Tariff Master/src/: __init__.py  app.py  config.py  database.py  download_dmd.py  downloader.py  main.py  parser.py  pricing.py  scheduler.py  search.py  trud.py  utils.py  web_app.py
Drug Tariff Master/src/api/: download_manager.py  trud_client.py
Drug Tariff Master/src/calculator/: __init__.py  calculator.py
Drug Tariff Master/src/config/: config.py  logging_config.py
Drug Tariff Master/src/database/: __init__.py  loader.py  models.py  schema.py
Drug Tariff Master/src/download/: __init__.py  downloader.py
Drug Tariff Master/src/drug_tariff_master/: __init__.py  main.py  (+5 more)
Drug Tariff Master/tests/: __init__.py  run_test.py  run_tests.py  test_api_key.py  test_download.py  verify_paths.py
Drug Tariff Master/web/: README.md
(+188 files in other folders)
