[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drug_tariff_master"
version = "0.1.0"
authors = [
    {name = "Author", email = "author@example.com"},
]
description = "A tool for downloading and processing dm+d data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "lxml>=4.9.0",
    "python-dotenv>=0.20.0",
    "urllib3>=1.26.0",
]

[project.scripts]
dmd = "drug_tariff_master.main:cli_entry_point"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["drug_tariff_master"] 