[metadata]
name = drug_tariff_master
version = 0.1.0
description = A tool for downloading and processing dm+d data
long_description = file: README.md
long_description_content_type = text/markdown
author = Author
author_email = author@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    lxml>=4.9.0
    python-dotenv>=0.20.0
    urllib3>=1.26.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dmd = drug_tariff_master.main:cli_entry_point 